objects/PC_Status_Indicators__mdt.object
<CustomObject>
    <description>This object will hold program status indicators</description>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Identifies if the intelligent indicator is active</description>
        <inlineHelpText>Identifies if the intelligent indicator is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Component_Attributes__c</fullName>
        <description>Component Attributes</description>
        <inlineHelpText>Component Attrbutes</inlineHelpText>
        <label>Component Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Content_Component_Attributes__c</fullName>
        <description>Holds the content component attributes that will be passed dynamically to the Content Component when instantiated dynamically.</description>
        <inlineHelpText>Holds the content component attributes that will be passed dynamically to the Content Component when instantiated dynamically.</inlineHelpText>
        <label>Content Component Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Content_Component__c</fullName>
        <description>Component to show in the content area of the status indicator. This will be loaded dynamically</description>
        <inlineHelpText>Fully qualified name of the component. e.g PatientConnect:PC_ContentView</inlineHelpText>
        <label>Content Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Content__c</fullName>
        <description>Content of the Intelligent Indicator</description>
        <inlineHelpText>Content of the Intelligent Indicator. You may also specify the fully qualified label path.</inlineHelpText>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Indicator_API_Name__c</fullName>
        <description>API Name with Namespace of the Intelligent Indicator Component</description>
        <inlineHelpText>API Name with Namespace of the Intelligent Indicator Component</inlineHelpText>
        <label>Indicator Component API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Order__c</fullName>
        <description>Order of the Intelligent Indicator Card</description>
        <inlineHelpText>Order of the Intelligent Indicator Card</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Title__c</fullName>
        <description>Title of the Intelligent Indicator. You may also specify the fully qualified label path ($Label.namespace.labelName).</description>
        <inlineHelpText>Title of the Intelligent Indicator. You may also specify the fully qualified label path ($Label.namespace.labelName).</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Intelligent Indicators</label>
    <pluralLabel>Intelligent Indicators</pluralLabel>
</CustomObject>